--- a/untitled folder/NEWINDEX.html
+++ b/untitled folder/NEWINDEX.html
@@ -22,6 +22,7 @@
     <link href="css/freelancer.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+
   </head>
 
   <body id="page-top">
@@ -29,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Stock Stats</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -50,64 +51,79 @@
       </div>
     </nav>
 
-
-
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/logo2.png" alt="">
+        <img class="img-fluid" src="img/profile.png" alt="">
         <div class="intro-text">
-          <span class="name"></span>
-          <span class="skills"></span>
+          <span class="name">Start Bootstrap</span>
+          <hr class="star-light">
+          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+
+
           <div class="row">
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="ticketForm" novalidate>
+            <form name="sentMessage" id="contactForm" novalidate>
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
-                  <label>Ticker</label>
-                  <input class="form-control" id="tickerTextBox" type="text" placeholder="Ticker" required data-validation-required-message="Please enter a ticker.">
+                  <label>Name</label>
+                  <input class="form-control" id="name" type="text" placeholder="Name" required data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
-              
-              
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls">
+                  <label>Email Address</label>
+                  <input class="form-control" id="email" type="email" placeholder="Email Address" required data-validation-required-message="Please enter your email address.">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls">
+                  <label>Phone Number</label>
+                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required data-validation-required-message="Please enter your phone number.">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls">
+                  <label>Message</label>
+                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required data-validation-required-message="Please enter a message."></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
               <br>
               <div id="success"></div>
               <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Enter</button>
+                <button onclick="ticketSubmit()" type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
               </div>
             </form>
           </div>
         </div>
+
         </div>
       </div>
     </header>
 
-    <script type="text/javascript" language = "javascript">
-      $(document).ready(function() {
-        var nameValue;
-            $("#sendMessageButton").click(function(event){
-              nameValue = document.getElementById("tickerTextBox").value;
-               $.get( 
-                  "https://www.blackrock.com/tools/hackathon/security-data?apiVersion=V1&datesAsStrings=true&debugMode=true&formatQuery=true&identifierType=aladdinTicker&identifiers=" + nameValue +"&jsonIncludeType=true&outputFormat=json&prettifyJson=true&query=" + nameValue +"&useZipped=true",
-                  function(data) {
-                    var nameValue = document.getElementById("tickerTextBox").value;
-                     //$('#stage').html(data);
-                     alert(data.requests + nameValue);
-                     window.location = 'pages/index.html';
-                  }
-               );
+       <script type="text/javascript">
+      function ticketSubmit(){
+        $("sendMessageButton").click(function(){
+            $.get("https://www.blackrock.com/tools/hackathon/security-data?apiVersion=V1&datesAsStrings=true&debugMode=true&formatQuery=true&identifierType=aladdinTicker&identifiers=APPL&jsonIncludeType=true&outputFormat=json&prettifyJson=true&query=APPLE&useZipped=true", function(data, status){
+                alert("Data: " + data + "\nStatus: " + status);
             });
-         });
+        });
+        console.log("test");
+        window.location = 'pages/index.html';
+      }
     </script>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
         <h2 class="text-center">Portfolio</h2>
-        <hr class="">
+        <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
@@ -177,18 +193,18 @@
     <section class="success" id="about">
       <div class="container">
         <h2 class="text-center">About</h2>
-        <hr class="">
+        <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p>This webapp serves to analyze publicly traded shares through several evaluation criteria. Initially, we start with the NASDAQ Dozen--a popular means of analyzing a share's future growth potential using 12 key perormance metrics.</p>
+            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>Stock Stats will continually be expanded as new and popular evaluation techniques are deployed. Stay tuned for more!</p>
+            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
           </div>
           <div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
               <i class="fa fa-download"></i>
-              Download Stats
+              Download Theme
             </a>
           </div>
         </div>
@@ -199,7 +215,7 @@
     <section id="contact">
       <div class="container">
         <h2 class="text-center">Contact Me</h2>
-        <hr class="">
+        <hr class="star-primary">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
@@ -251,8 +267,8 @@
           <div class="row">
             <div class="footer-col col-md-4">
               <h3>Location</h3>
-              <p>Philadelphia PA
-                <br>USA, 19104</p>
+              <p>3481 Melrose Place
+                <br>Beverly Hills, CA 90210</p>
             </div>
             <div class="footer-col col-md-4">
               <h3>Around the Web</h3>
@@ -285,9 +301,9 @@
               </ul>
             </div>
             <div class="footer-col col-md-4">
-              <h3>About The Developer</h3>
-              <p> Open source Bootstrap theme created by
-                <a href="http://startbootstrap.com">Start Bootstrap</a>. Developed by @kunalrgarg</p>
+              <h3>About Freelancer</h3>
+              <p>Freelance is a free to use, open source Bootstrap theme created by
+                <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
             </div>
           </div>
         </div>
@@ -296,7 +312,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; Stock Stats 2017
+              Copyright &copy; Your Website 2017
             </div>
           </div>
         </div>
@@ -583,7 +599,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
